comment linux downloads as we are not building it

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
       {% if site.show_downloads %}
         <a href="{{ site.github.windows_download }}" class="btn">Download for Windows</a>
         <a href="{{ site.github.mac_download }}" class="btn">Download for Mac</a>
-        <a href="{{ site.github.linux_download }}" class="btn">Download for Linux</a>
+        <!-- <a href="{{ site.github.linux_download }}" class="btn">Download for Linux</a> -->
       {% endif %}
     </header>
 
